--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "latestVersionCode": 11602,
+    "latestVersionCode": 11607,
     "minVersionCode": 11601,
     "isForceUpdate": false,
-    "changelog": "Первая версия"
+    "changelog": "- Добавлены новые экраны для поздравления пользователя с днем рождения и с новым годом (отображение 31 декабря-1 января)\n-Добавлено открытие поиска Яндекса при нажатии на карточку домашнего задания в полноэкранном диалоговом окне урока"
 }
