Update version code and changelog in config.json
Updated the latest version code and changelog details.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "latestVersionCode": 11705,
+    "latestVersionCode": 11706,
     "minVersionCode": 11704,
     "isForceUpdate": false,
-    "changelog": "Исправлено отображение карточки нового обновления"
+    "changelog": "Реализован экран итогов четверти, убран лишний перерасчет эксплойта, новый оверлей для debug анализа производительности приложения"
 }
