--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "latestVersionCode": 11706,
+    "latestVersionCode": 11707,
     "minVersionCode": 11704,
     "isForceUpdate": false,
-    "changelog": "Реализован экран итогов четверти, убран лишний перерасчет эксплойта, новый оверлей для debug анализа производительности приложения"
+    "changelog": "Новая возможность изменить имя и фамилию для одноклассника вместо UUID в экране рейтинга предмета, исправлена работа эксплойта, исправлена невозможность закрыть экран итогов четверти, исправлена пунктуация в экране итогов четверти"
 }
