--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "latestVersionCode": 11708,
+    "latestVersionCode": 11709,
     "minVersionCode": 11704,
     "isForceUpdate": false,
-    "changelog": "Новая возможность изменить имя и фамилию для одноклассника вместо UUID в экране рейтинга предмета, исправлена работа эксплойта, исправлена невозможность закрыть экран итогов четверти, исправлена пунктуация в экране итогов четверти"
+    "changelog": "Добавлен показ технический работ на стороне сервера"
 }
