--- a/config.json
+++ b/config.json
@@ -2,5 +2,5 @@
     "latestVersionCode": 11709,
     "minVersionCode": 11704,
     "isForceUpdate": false,
-    "changelog": "Добавлен показ технический работ на стороне сервера"
+    "changelog": "Добавлен показ технических работ на стороне сервера"
 }
